fonts, css,html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 	<div class="green-box">
-		<header class="header-wrapper">
-			<img src="img/plane.svg" alt="logo" class="logo">
+
+		<header>
+			
 			<nav class="navigation">
 				<ul>
 					<li class="nav-li">
@@ -26,7 +27,16 @@
 					</li>
 				</ul>
 			</nav>
+			<img src="img/plane.svg" alt="logo" class="logo">
 		</header>
+
+		<div class="white-box">
+			<div class="green-box2">
+				<p class="animated-text"></p>
+			</div>
+
+
+		</div>
 
 	</div>
 
