--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
 
 		<header>
 			
-			<nav class="navigation">
-				<ul>
-					<li class="nav-li">
-						<a href="#"> home </a>
-					</li>
-					<li class="nav-li">
-						<a href="#"> news </a>
-					</li>
-					<li class="nav-li">
-						<a href="#"> about </a>
-					</li>
-					<li class="nav-li">
-						<a href="#"> contact </a>
-					</li>
-				</ul>
-			</nav>
-			<img src="img/plane.svg" alt="logo" class="logo">
+				<nav class="navigation">
+					<ul>
+						<li class="nav-li">
+							<a href="#"> home </a>
+						</li>
+						<li class="nav-li">
+							<a href="#"> news </a>
+						</li>
+						<li class="nav-li">
+							<a href="#"> about </a>
+						</li>
+						<li class="nav-li">
+							<a href="#"> contact </a>
+						</li>
+					</ul>
+				</nav>
+				<img src="img/plane.svg" alt="logo" class="logo">
+			
 		</header>
 
 		<div class="white-box">
 			<div class="green-box2">
-				<p class="animated-text"></p>
+				<p class="animated-text">CSS PROPERTIES - POSITION</p>
+
 			</div>
 
-
+			<p class="read-more"><a href="#"> read more </a> </p>
 		</div>
+       <p class="created"> CREATED BY ME </p>
 
 	</div>
 
